tests/negative/semantic/array_insert_type_mismatch/input.ci
void main() {
    int[] xs = [1];
    arrayInsert(xs, 0, "oops");
}
